--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "style-attr": "^1.0.2",
     "three": "^0.87.0",
     "three-bmfont-text": "^2.1.0",
-    "webvr-polyfill": "^0.10.5"
+    "webvr-polyfill": "https://github.com/larsnolden/webvr-polyfill"
   },
   "devDependencies": {
     "browserify": "^13.1.0",
